# chess-cpp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  bishop.cpp  board.cpp  board.h  colour.cpp  game.cpp  game.h  king.cpp  king.h  knight.cpp  main.cpp  main.h  pawn.cpp  pawn.h  piece.cpp  piece.h  position.cpp  position.h  queen.cpp  queen.h  rook.cpp  rook.h
.github/workflows/: cmake.yml  codeql.yml
docs/: _config.yml  index.md  robots.txt
src/: bishop.cpp  bishop.h  board.cpp  board.h  colour.cpp  colour.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  main.h  pawn.cpp  pawn.h  piece.cpp  piece.h  position.cpp  position.h  queen.cpp  queen.h  rook.cpp  rook.h
